--- a/car.qsf
+++ b/car.qsf
@@ -3,8 +3,9 @@ set_global_assignment -name FAMILY Stratix
 set_global_assignment -name INI_VARS "qatm_force_vqm=on;vqmo_gen_svgx_vqm=on"
 set_global_assignment -name TOP_LEVEL_ENTITY wires
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY "D:/FPGA/car/car.runs/synth_1"
-set_global_assignment -name PROJECT_CREATION_TIME_DATE "2024-11-04 12:59:08"
+set_global_assignment -name PROJECT_CREATION_TIME_DATE "2024-12-08 14:32:45"
 set_global_assignment -name VERILOG_FILE "D:/FPGA/car/car.srcs/sources_1/new/wires.v"
+set_global_assignment -name VERILOG_FILE "D:/FPGA/car/car.srcs/sources_1/new/PWM_out.v"
 set_global_assignment -name MAX_RAM_BLOCKS_M512 0
 set_global_assignment -name MAX_RAM_BLOCKS_MRAM 0
 set_global_assignment -name AUTO_MERGE_PLLS OFF
@@ -12,4 +13,4 @@ set_global_assignment -name AUTO_RAM_RECOGNITION ON
 set_global_assignment -name AUTO_ROM_RECOGNITION ON
 set_global_assignment -name DSP_BLOCK_BALANCING AUTO
 set_global_assignment -name STRATIX_OPTIMIZATION_TECHNIQUE BALANCED
-set_global_assignment -name VERILOG_INPUT_VERSION VERILOG_2001
+set_global_assignment -name VERILOG_INPUT_VERSION SYSTEMVERILOG_2005
